src/Components/RelateCompareOutfitLists/relateOutfitLists.scss
.slider-container {
  position: relative;
  display: flex;
  align-items: center;
  width: 90%;
  height: 315px;
}

.arrow-button-left {
  position: absolute;
  left: 0;
  background: white;
  border-radius: 100%;
  opacity: .2;
}

.arrow-button-right {
  position: absolute;
  right: 0;
  background: white;
  border-radius: 100%;
  opacity: .2;
}

.arrow-button-right:hover,
.arrow-button-left:hover {
  opacity: 1;
}

#related-slider,
#outfit-slider {
  width: 100%;
  height: 100%;
  white-space: nowrap;
  overflow-x: scroll;
  scroll-behavior: smooth;
  scrollbar-width: none;
  overflow-y: hidden;
}

#related-slider::-webkit-scrollbar {
  display: none;
}

#outfit-slider::-webkit-scrollbar {
  display: none;
}

.slider-cards {
  position: relative;
  width: 230px;
  height: 300px;
  display: inline-block;
  margin-left: 5px;
  margin-right: 5px;
  border-style: solid;
}

#add-outfit-card {
  position: relative;
  top: -226px;
}

#add-outfit-button {
  position: relative;
  top: 120px;
  left: 95px;
}

#add-outfit-text {
  position: relative;
  top: 120px;
  left: 75px;
}

#image-container {
  position: relative;
  width: 230px;
  height: 75%;
}

#image {
  width: 100%;
  height: 220px;
}

#related-card-button {
  margin: 5px;
  position: absolute;
  right: 0;
  top: 0;
  padding: 10px;
  background: white;
  border-radius: 100%;
  opacity: .5;
}

#remove-outfit-button {
  position: absolute;
  right: 0;
  top: 0;
  padding: 10px;
}

#productCategory {
  margin-left: 5px;
}

#productName {
  margin-left: 5px;
}

#productPrice {
  font-size: 13px;
  margin-left: 5px;
}

#salePrice {
  color: red;
  display: inline-block;
  font-size: 13px;
  margin-left: 5px;
}

#oldPrice {
  text-decoration: line-through;
  display: inline-block;
  font-size: 12px;
  margin-left: 10px;
}

#productStarRating {
  position: relative;
  margin-left: 5px;
  margin-top: -1px;
  display: inline-block;
}

#number-of-ratings {
  position: relative;
  display: inline-block;
  top: -7px;
  left: -73px;
}

